# variousplug

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README_ja.md  pyproject.toml  pytest.ini  test_script.py
.github/workflows/: ci.yml  release.yml
docs/: platform-comparison-ja.md  platform-comparison.md  runpod-guide.md  vast-ai-guide.md
ml_test_project/: predict.py  train.py
ml_test_project/data/: test_data.txt
src/variousplug/: __init__.py  base.py  cli.py  config.py  executor.py  factory.py  interfaces.py  runpod_client.py  utils.py  vast_client.py
tests/: __init__.py  conftest.py
tests/unit/: test_base.py  test_cli.py  test_config.py  test_factory.py  test_interfaces.py  test_runpod_client.py  test_utils.py  test_vast_client.py  test_vast_file_sync.py
